--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -2,9 +2,13 @@
 @tailwind components;
 @tailwind utilities;
 
+@import url("https://fonts.googleapis.com/css2?family=Grechen+Fuemen&family=Montserrat+Alternates:wght@400;500;600&display=swap");
+
 :root {
-  --background: #ffffff;
-  --foreground: #171717;
+  --background: #000;
+  --primary-color: hsl(358, 80%, 49%);
+  --dark-color: hsl(358, 76%, 45%);
+  --foreground: #ffffff;
 }
 
 @media (prefers-color-scheme: dark) {
@@ -18,4 +22,36 @@ body {
   color: var(--foreground);
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
+}
+
+.hero-right {
+  background-color: hsla(0, 0%, 1%, 0.1); /* Light transparent black */
+  backdrop-filter: blur(16px); /* Blur effect */
+  -webkit-backdrop-filter: blur(16px); /* Safari support */
+  padding: 1rem; /* Padding for spacing */
+  margin-top: 7.5rem;
+  margin-bottom: 5rem;
+  border-radius: 1.5rem; /* Rounded corners */
+  border: 2px solid hsla(0, 0%, 100%, 0.5); /* White semi-transparent border */
+}
+
+.cvname {
+  font-family: "Grechen Fuemen", cursive;
+}
+
+.services__card {
+  cursor: pointer;
+  width: 30%;
+  background-color: hsl(358, 2%, 10%);
+  padding: 1rem 1.5rem 1.5rem 1rem;
+  border-radius: 2rem;
+}
+
+.services__name {
+  font-size: 1rem;
+  margin-bottom: 1rem;
+}
+
+.services__description {
+  color: hsl(358, 2%, 66%);
 }
